--- a/lesson22.html
+++ b/lesson22.html
@@ -5,11 +5,10 @@
   <script>
     'use strict';
     function camelize(str) {
-      let arr = str.split('-');
-      return arr;
+      return str.split('-').map((text, index) => index == 0 ? text : text[0].toUpperCase() + text.substring(1)).join('');
     }
 
-    camelize("background-color") == 'backgroundColor';
+    alert(camelize("background-color"));// == 'backgroundColor';
     camelize("list-style-image") == 'listStyleImage';
     camelize("-webkit-transition") == 'WebkitTransition';
   </script>
